Fixed input overflow when shrinked (closes #20)

--- a/src/scss/themes/shops/components/_input.scss
+++ b/src/scss/themes/shops/components/_input.scss
@@ -1,4 +1,5 @@
 @import '../_variables';
+@import '../mixins';
 @import '../../mixins';
 
 .k-input {
@@ -17,11 +18,11 @@
 
 		.icon {
 			flex: 0 0 auto;
-			padding: 10px;
+			padding: 8px;
 			color: $grey-darkest;
 		}
 		input {
-			flex: 1 0 auto;
+			flex: 1 1 auto;
 			outline: none;
 			font-size: 20px;
 			font-family: inherit;
@@ -29,10 +30,13 @@
 			border: none;
 			padding: 8px;
 			transition: all .2s;
+			// Needed to prevent overflow since input comes with fixed width and flex children have min-width: auto.
+			min-width: 0;
 		}
 		.clear {
-			cursor: pointer;
-			padding: 10px;
+			@include clickable;
+			flex: 0 0 auto;
+			padding: 8px;
 			color: $grey-darkest;
 		}
 	}
